--- a/src/Evaluation.ipynb
+++ b/src/Evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,10 @@
     "\n",
     "import os\n",
     "\n",
-    "from data import Data\n",
+    "import data\n",
     "from model import Model\n",
+    "\n",
+    "import colours as c\n",
     "\n",
     "dir = os.getcwd()\n",
     "dir_main = os.path.dirname(os.path.abspath(dir))"
@@ -22,47 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/site-packages/tensorflow/python/ops/clip_ops.py:110: calling reduce_sum (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "keep_dims is deprecated, use keepdims instead\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "d = Data()\n",
+    "d = data.Data()\n",
+    "d = data.Scorer()\n",
     "m = Model(d.smiles_vocabulary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Restoring parameters from /Users/Yuen_In/Desktop/Programming/Nightshade/trained/Solanaceae-E\n",
-      "Model restored.\n",
-      "[array([[7.3392415e-01, 8.6957618e-04, 1.2731567e-03, 2.8238329e-03,\n",
-      "        1.6738701e-03, 7.4303463e-02, 3.8515969e-05, 8.2440088e-03,\n",
-      "        1.9109799e-03, 5.1862132e-03, 1.7062968e-01, 7.4879569e-04]],\n",
-      "      dtype=float32)]\n",
-      "\n",
-      "Compound not in database.\n",
-      "['NR-AHR', 'NR-AR-LBD', 'NR-AR', 'NR-aromatase', 'NR-ER-LBD', 'NR-ER', 'NR-PPAR-gamma', 'SR-ARE', 'SR-ATAD5', 'SR-HSE', 'SR-MMP', 'SR-p53']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with tf.Session() as session:\n",
+    "    \n",
+    "    labels = None\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
     "    saver.restore(session, dir_main + \"/trained/Solanaceae-E\")\n",
@@ -70,25 +49,40 @@
     "    print(\"Model restored.\")\n",
     "    \n",
     "    # Manually evaluate compound\n",
-    "    compound_smiles = \"NNC(=O)C1=CC=C(O)C=C1\"\n",
+    "    compound_smiles = \"CN1C=CC2=CC(NC(=O)NC3=CC(C)=NS3)=CC=C12\"\n",
     "    \n",
     "    feed_smiles = [d.indexSmiles(compound_smiles, padding=200)]\n",
     "    \n",
     "    predicted = session.run([m.output], feed_dict={m.batch_size: 1, m.input: feed_smiles})\n",
+    "    rounded = np.round(predicted[0][0])\n",
     "    \n",
-    "    print(predicted)\n",
+    "    print(c.BLUE + c.BOLD + \"\\nPredicted values:\" + c.END)\n",
+    "    print(\"Logistics: {}\".format(predicted[0][0]))\n",
+    "    print(\"Rounded: {}\".format(rounded))\n",
+    "    print(\"String labels: {}\".format(d.labelsToReadable(rounded)))\n",
     "    \n",
     "    if compound_smiles in d.compounds:\n",
     "        string_labels = d.compounds[compound_smiles][\"labels\"]\n",
     "        labels = [d.classes.index(label) for label in string_labels]\n",
     "        \n",
-    "        print(\"\\nLiterature database:\")\n",
-    "        print(string_labels)\n",
-    "        print(labels)\n",
+    "        print(c.RED + c.BOLD + \"\\nLiterature database:\" + c.END)\n",
+    "        print(\"Expect: {}\".format(d.createLabels(labels)))\n",
+    "        print(\"Tags: {}\".format(string_labels))\n",
     "        \n",
     "    else:\n",
-    "        print(\"\\nCompound not in database.\")\n",
-    "        print(d.classes)"
+    "        print(c.RED + c.BOLD + \"\\nCompound not in database.\" + c.END)\n",
+    "    \n",
+    "    print(c.BOLD + \"\\nAvailable classes:\" + c.END)\n",
+    "    print(d.classes)\n",
+    "    \n",
+    "    figure = plt.figure(figsize=(20, 5))\n",
+    "    plt.bar(d.classes, predicted[0][0], color=\"blue\")\n",
+    "    plt.ylim([0, 1])\n",
+    "    \n",
+    "    if labels != None:\n",
+    "        figure = plt.figure(figsize=(20, 5))\n",
+    "        plt.bar(d.classes, d.createLabels(labels), color=\"red\")\n",
+    "        plt.ylim([0, 1])"
    ]
   },
   {
