[compatibility] update to address critical

--- a/src/Evaluation.ipynb
+++ b/src/Evaluation.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "import os\n",
     "\n",
-    "import data\n",
+    "import data as dat\n",
     "from model import Model\n",
     "\n",
     "import colours as c\n",
@@ -28,9 +28,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "d = data.Data()\n",
-    "d = data.Scorer()\n",
-    "m = Model(d.smiles_vocabulary)"
+    "data = dat.Data()\n",
+    "scorer = dat.Scorer()\n",
+    "m = Model(data.smiles_vocabulary, dropout=False)"
    ]
   },
   {
@@ -41,6 +41,8 @@
    "source": [
     "with tf.Session() as session:\n",
     "    \n",
+    "    d = data\n",
+    "    \n",
     "    labels = None\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
@@ -49,7 +51,7 @@
     "    print(\"Model restored.\")\n",
     "    \n",
     "    # Manually evaluate compound\n",
-    "    compound_smiles = \"CN1C=CC2=CC(NC(=O)NC3=CC(C)=NS3)=CC=C12\"\n",
+    "    compound_smiles = \"CCCCCCCCCCCCOCCOCCOCCOCCOCCOCCOCCOCCOCCO\"\n",
     "    \n",
     "    feed_smiles = [d.indexSmiles(compound_smiles, padding=200)]\n",
     "    \n",
@@ -73,7 +75,9 @@
     "        print(c.RED + c.BOLD + \"\\nCompound not in database.\" + c.END)\n",
     "    \n",
     "    print(c.BOLD + \"\\nAvailable classes:\" + c.END)\n",
-    "    print(d.classes)\n",
+    "    print(\"Current: {}\".format(d.classes))\n",
+    "    print(\"Training: {}\".format(data.classes))\n",
+    "    print(\"Scorer: {}\".format(scorer.classes))\n",
     "    \n",
     "    figure = plt.figure(figsize=(20, 5))\n",
     "    plt.bar(d.classes, predicted[0][0], color=\"blue\")\n",
@@ -84,6 +88,13 @@
     "        plt.bar(d.classes, d.createLabels(labels), color=\"red\")\n",
     "        plt.ylim([0, 1])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
