[compatibility] fit to new data changes

--- a/src/Evaluation.ipynb
+++ b/src/Evaluation.ipynb
@@ -41,17 +41,22 @@
    "source": [
     "with tf.Session() as session:\n",
     "    \n",
+    "    # Set to \"scorer\" or \"data\";\n",
+    "    # validator should not be used in scoring.\n",
     "    d = data\n",
     "    \n",
-    "    labels = None\n",
+    "    # Manually evaluate compound\n",
+    "    # Be mindful of escape \"\\\" characters in SMILES\n",
+    "    compound_smiles = \"CCN(CC)C1=CC=C2C(C)=CC(=O)OC2=C1\"\n",
+    "    \n",
+    "    literature_labels = None\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
-    "    saver.restore(session, dir_main + \"/trained/Solanaceae-E\")\n",
+    "    saver.restore(session, dir_main + \"/trained/Solanaceae-I\")\n",
     "    \n",
     "    print(\"Model restored.\")\n",
     "    \n",
-    "    # Manually evaluate compound\n",
-    "    compound_smiles = \"CCCCCCCCCCCCOCCOCCOCCOCCOCCOCCOCCOCCOCCO\"\n",
+    "    print(c.GREEN + c.BOLD + c.UNDERLINE + \"\\nAnalysis of compound {}\".format(compound_smiles) + c.END)\n",
     "    \n",
     "    feed_smiles = [d.indexSmiles(compound_smiles, padding=200)]\n",
     "    \n",
@@ -65,10 +70,13 @@
     "    \n",
     "    if compound_smiles in d.compounds:\n",
     "        string_labels = d.compounds[compound_smiles][\"labels\"]\n",
-    "        labels = [d.classes.index(label) for label in string_labels]\n",
+    "        negative_labels = d.compounds[compound_smiles][\"negative\"]\n",
+    "        literature_labels, _ = d.createLabels(string_labels, negative_labels, map_neutrals=True)\n",
+    "        \n",
+    "        literature_labels = list(literature_labels)\n",
     "        \n",
     "        print(c.RED + c.BOLD + \"\\nLiterature database:\" + c.END)\n",
-    "        print(\"Expect: {}\".format(d.createLabels(labels)))\n",
+    "        print(\"Expect: {}\".format(literature_labels))\n",
     "        print(\"Tags: {}\".format(string_labels))\n",
     "        \n",
     "    else:\n",
@@ -83,9 +91,9 @@
     "    plt.bar(d.classes, predicted[0][0], color=\"blue\")\n",
     "    plt.ylim([0, 1])\n",
     "    \n",
-    "    if labels != None:\n",
+    "    if literature_labels != None:\n",
     "        figure = plt.figure(figsize=(20, 5))\n",
-    "        plt.bar(d.classes, d.createLabels(labels), color=\"red\")\n",
+    "        plt.bar(d.classes, literature_labels, color=\"red\")\n",
     "        plt.ylim([0, 1])"
    ]
   },
