[refactor] evaluation padding changes

--- a/src/Evaluation.ipynb
+++ b/src/Evaluation.ipynb
@@ -43,22 +43,22 @@
     "    \n",
     "    # Set to \"scorer\" or \"data\";\n",
     "    # validator should not be used in scoring.\n",
-    "    d = data\n",
+    "    d = scorer\n",
     "    \n",
     "    # Manually evaluate compound\n",
     "    # Be mindful of escape \"\\\" characters in SMILES\n",
-    "    compound_smiles = \"CCN(CC)C1=CC=C2C(C)=CC(=O)OC2=C1\"\n",
+    "    compound_smiles = \"OC1=CC=CC2=C(O)C=CC=C12\"\n",
     "    \n",
     "    literature_labels = None\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
-    "    saver.restore(session, dir_main + \"/trained/Solanaceae-I\")\n",
+    "    saver.restore(session, dir_main + \"/trained/Solanaceae-L\")\n",
     "    \n",
     "    print(\"Model restored.\")\n",
     "    \n",
     "    print(c.GREEN + c.BOLD + c.UNDERLINE + \"\\nAnalysis of compound {}\".format(compound_smiles) + c.END)\n",
     "    \n",
-    "    feed_smiles = [d.indexSmiles(compound_smiles, padding=200)]\n",
+    "    feed_smiles = [d.indexSmiles(compound_smiles, padding=400)]\n",
     "    \n",
     "    predicted = session.run([m.output], feed_dict={m.batch_size: 1, m.input: feed_smiles})\n",
     "    rounded = np.round(predicted[0][0])\n",
