--- a/src/Evaluation.ipynb
+++ b/src/Evaluation.ipynb
@@ -52,7 +52,7 @@
     "    literature_labels = None\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
-    "    saver.restore(session, dir_main + \"/trained/Solanaceae-L\")\n",
+    "    saver.restore(session, dir_main + \"/trained/Solanaceae-M\")\n",
     "    \n",
     "    print(\"Model restored.\")\n",
     "    \n",
