--- a/src/Scorer.ipynb
+++ b/src/Scorer.ipynb
@@ -9,6 +9,8 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
+    "import sklearn.metrics as metrics\n",
+    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os\n",
@@ -28,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scorer = dat.Validator()\n",
+    "scorer = dat.Scorer()\n",
     "m = Model(scorer.smiles_vocabulary, dropout=False)"
    ]
   },
@@ -41,39 +43,146 @@
     "with tf.Session() as session:\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
-    "    saver.restore(session, dir_main + \"/trained/Solanaceae-L\")\n",
+    "    saver.restore(session, dir_main + \"/trained/\" + model_name)\n",
+    "    \n",
+    "    iteration = session.run(m.global_step)\n",
     "    \n",
     "    print(\"Model restored.\")\n",
     "    \n",
     "    # Score the data iteratively\n",
     "    smiles, labels, weights, smiles_raw = scorer.getEvaluations()\n",
     "    \n",
-    "    correct = [0] * scorer.classes_amount\n",
     "    total = [0] * scorer.classes_amount\n",
+    "    \n",
+    "    # Classifications\n",
+    "    false_negative = [0] * scorer.classes_amount\n",
+    "    false_positive = [0] * scorer.classes_amount\n",
+    "    \n",
+    "    true_negative = [0] * scorer.classes_amount\n",
+    "    true_positive = [0] * scorer.classes_amount\n",
+    "    \n",
+    "    outputs = list()\n",
+    "    weight_list = list()\n",
     "    \n",
     "    for smile, label, weight, smile_raw in zip(smiles, labels, weights, smiles_raw):\n",
     "        \n",
     "        output = session.run([m.output], feed_dict={m.batch_size: 1, m.input: np.expand_dims(smile, 0)})\n",
+    "        \n",
+    "        outputs.append(output[0])\n",
     "        output = list(np.round(output)[0,0])\n",
     "        \n",
-    "        for i in range(len(output)):\n",
+    "        weight_list.append(weights[0])\n",
+    "\n",
+    "        \n",
+    "        for i in range(len(label)):\n",
     "            \n",
     "            if label[i] != 0.5:\n",
-    "            \n",
-    "                if output[i] == label[i]:\n",
-    "                    correct[i] += 1\n",
-    "\n",
-    "                total[i] += 1\n",
     "                \n",
-    "        print(\"\\nClasses: {}\".format(scorer.classes))\n",
-    "        print(\"Correct: {}\".format(correct))\n",
+    "                total[i] += 1\n",
+    "            \n",
+    "                if label[i] == output[i]:\n",
+    "\n",
+    "                    if output[i] == 1:\n",
+    "                        true_positive[i] += 1\n",
+    "\n",
+    "                    elif output[i] == 0:\n",
+    "                        true_negative[i] += 1\n",
+    "\n",
+    "                elif label[i] != output[i]:\n",
+    "\n",
+    "                    if output[i] == 1:\n",
+    "                        false_positive[i] += 1\n",
+    "\n",
+    "                    elif output[i] == 0:\n",
+    "                        false_negative[i] += 1\n",
+    "                \n",
     "        print(\"Total: {}\".format(total))\n",
-    "        \n",
-    "        percentages = list(np.array(correct)/np.array(total) * 100)\n",
-    "        print(\"Percentages: {}\".format(percentages))\n",
-    "        \n",
-    "    figure = plt.figure(figsize=(20, 5))\n",
-    "    plt.bar(scorer.classes, percentages, color=\"blue\")"
+    "    \n",
+    "    true_positive, true_negative, false_positive, false_negative, total = np.array(true_positive), np.array(true_negative), np.array(false_positive), np.array(false_negative), np.array(total)\n",
+    "    #[88.17733990147784, 97.77777777777777, 98.62306368330465, 92.61363636363636, 89.53488372093024, 96.661101836394, 94.70198675496688, 82.67148014440433, 93.88083735909822, 96.55172413793103, 88.95027624309392, 93.4959349593496]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate graphs\n",
+    "figure = plt.figure(figsize=(20, 9))\n",
+    "    \n",
+    "tp_per = true_positive/total * 100\n",
+    "tn_per = true_negative/total * 100\n",
+    "\n",
+    "fp_per = false_positive/total * 100\n",
+    "fn_per = false_negative/total * 100\n",
+    "\n",
+    "# Compoutes the FP/TP rates at standard cutoff\n",
+    "fp_rate = false_positive/(false_positive + true_negative)\n",
+    "tp_rate = true_positive/(true_positive + false_negative)\n",
+    "    \n",
+    "one = plt.barh(scorer.classes, tn_per + tp_per, color=\"red\")\n",
+    "two = plt.barh(scorer.classes, tp_per, color=\"blue\")\n",
+    "plt.legend([one, two], [\"True negative\", \"True positive\"], loc=4)\n",
+    "\n",
+    "for i, v in enumerate(tn_per + tp_per):\n",
+    "    plt.text(v, i - .1, str(round(v*100)/100), color=\"red\", fontweight=\"bold\")\n",
+    "    \n",
+    "for i, v in enumerate(tp_per):\n",
+    "    plt.text(v, i - .1, str(round(v*100)/100), color=\"blue\", fontweight=\"bold\")\n",
+    "\n",
+    "plt.xlabel(\"Percentage [numbers in 4sf] / %\")\n",
+    "plt.title(\"Correct predictions\", fontweight=\"bold\")\n",
+    "    \n",
+    "figure = plt.figure(figsize=(20, 9))\n",
+    "one = plt.barh(scorer.classes, fn_per + fp_per, color=\"green\")\n",
+    "two = plt.barh(scorer.classes, fp_per, color=\"yellow\")\n",
+    "\n",
+    "for i, v in enumerate(fn_per + fp_per):\n",
+    "    plt.text(v + .1, i - .1, str(round(v*100)/100), color=\"green\", fontweight=\"bold\")\n",
+    "    \n",
+    "for i, v in enumerate(fp_per):\n",
+    "    plt.text(v + .1, i - .1, str(round(v*100)/100), color=\"yellow\", fontweight=\"bold\")\n",
+    "\n",
+    "plt.legend([one, two], [\"False negative\", \"False positive\"], loc=4)\n",
+    "plt.xlabel(\"Percentage [numbers in 4sf] / %\")\n",
+    "plt.title(\"Incorrect predictions\", fontweight=\"bold\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "swap_labels = np.swapaxes(labels, 0, 1)\n",
+    "swap_outs = np.swapaxes(np.squeeze(outputs), 0, 1)\n",
+    "\n",
+    "# Weight scores are already computed up to this point, there is no need for further integration\n",
+    "swap_weights = np.swapaxes(np.squeeze(weight_list), 0, 1)\n",
+    "\n",
+    "def createRoc (index):\n",
+    "    fpr, tpr, thresholds = metrics.roc_curve(y_true=np.floor(swap_labels[index]), y_score=swap_outs[index], pos_label=1)\n",
+    "    #fpr, tpr, thresholds = metrics.roc_curve(y_true=np.floor(swap_labels[index]), y_score=swap_outs[index], pos_label=1)\n",
+    "    auc_score = metrics.auc(fpr, tpr)\n",
+    "\n",
+    "    figure = plt.figure(figsize=(7, 7))\n",
+    "\n",
+    "    one = plt.plot(fpr, tpr, color=\"blue\")\n",
+    "    two = plt.plot([0, 1], [0, 1], 'k--', lw=2)\n",
+    "\n",
+    "    plt.ylabel(\"True positive rate\")\n",
+    "    plt.xlabel(\"False positive rate\")\n",
+    "    plt.ylim(0, 1.03)\n",
+    "    plt.xlim(0, 1)\n",
+    "\n",
+    "    plt.legend(one, [\"Area under curve = {}\".format(auc_score)], loc=4)\n",
+    "\n",
+    "    plt.title(\"ROC curve for {}\".format(scorer.classes[index]), fontweight=\"bold\")\n",
+    "    \n",
+    "for i in range(scorer.classes_amount):\n",
+    "    createRoc(i)\n",
+    "    "
    ]
   },
   {
